Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,27 +1,25 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = 5521476267:AAHTgNgqMlg9JXonUVJKDYAj41gI4VmLkpI""
+GDRIVE_FOLDER_ID = "1ad1_8zVg3y3rslRsukkZ16Nwp2GMRSQf"
+OWNER_ID = 716100216
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 14472726
+TELEGRAM_HASH = "08d2734295636f07a5ed6637116ea3ef"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001717343400"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
-CMD_INDEX = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://mirror-gan.my.id/2:"
+STATUS_LIMIT = "3"
+STOP_DUPLICATE = "True"
+CMD_INDEX = "3"
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "180"
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
@@ -29,9 +27,9 @@ UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
+CUSTOM_FILENAME = "[@mirror_gan]"
 # qBittorrent
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
@@ -64,7 +62,7 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
